@@ -22,6 +22,13 @@
       <dl>
 
 
+<dt><b>LilyPond 2.8.6 available</b> - <em>August 8, 2006</em> <dd>
+This release contains a few minor bugfixes; the source tarball is also
+available.  (<a href="install/#2.8">Download</a>)
+
+</dd>
+
+
 <dt><b>LilyPond 2.9.14 available</b> - <em>August 4, 2006</em>
 
 <dd>
