@@ -1,3 +1,7 @@
+2006-09-04  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): 2.9.17
+
 2006-08-26  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (href): 2.9.16.
